--- a/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_sub.html
+++ b/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_sub.html
@@ -474,7 +474,7 @@
 						for(var i = 0; i < waiting.length; i++) {
 							waiting[i].close();
 						}
-						waiting=[];
+						waiting = [];
 					}
 				});
 			}
@@ -614,15 +614,13 @@
 							console.log('### ERROR ### 请求上传凭证失败 ' + QNUptoken.Message);
 							wd.close();
 						} else {
-							console.log('获取上传凭证成功');
-							for(var i = 0; i < QNUptoken.Data.length; i++) {
-								console.log(JSON.stringify(QNUptoken.Data[i]));
-								var filePath = QNUptoken.Data[i].P_Key.split("/");
-								var fileName = filePath[filePath.length - 1];
-								var fileId = fileName.split("_")[0];
-
-								//记录图片和缩略图地址
-								for(var j = 0; j < multiMedia.data.PictureArray.length; j++) {
+							//记录图片和缩略图地址
+							for(var j = 0; j < multiMedia.data.PictureArray.length; j++) {
+								for(var i = 0; i < QNUptoken.Data.length; i++) {
+									//console.log(JSON.stringify(QNUptoken.Data[i]));
+									var filePath = QNUptoken.Data[i].P_Key.split("/");
+									var fileName = filePath[filePath.length - 1];
+									var fileId = fileName.split("_")[0];
 									if(multiMedia.data.PictureArray[j].id == fileId) {
 										multiMedia.data.PictureArray[j].domain = QNUptoken.Data[i].Domain + QNUptoken.Data[i].Key;
 										multiMedia.data.PictureArray[j].thumb = QNUptoken.Data[i].OtherKey[configure.thumbKey[i]];
