--- a/JiaoBaoYun-hb/html/cloud/record_student_add.html
+++ b/JiaoBaoYun-hb/html/cloud/record_student_add.html
@@ -9,11 +9,7 @@
 		<link rel="stylesheet" href="../../css/utils/common.css" />
 		<link rel="stylesheet" href="../../css/iconfont/iconfont.css" />
 		<link rel="stylesheet" href="../../css/utils/MultiMedia.css" />
-
-		<script src="../../js/mui.min.js"></script>
-		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
-		<script type="text/javascript" src="../../js/utils/MultiMedia.js"></script>
-		<script type="text/javascript" src="../../js/utils/events.js"></script>
+		<link rel="stylesheet" href="../../css/utils/preview.css" />
 
 		<style>
 			body,
@@ -22,70 +18,13 @@
 			}
 
 			.mui-table-view:before,
-			.mui-table-view:after,
-			.mui-table-view-cell:after {
+			.mui-table-view:after {
 				height: 0px;
 			}
 
-			.mui-input-group:before,
-			.mui-input-group .mui-input-row:after,
-			.mui-input-group:after {
-				height: 0px;
-			}
-
-			.mui-checkbox input[type=checkbox]:checked:before,
-			.mui-radio input[type=radio]:checked:before {
-				color: #86BE49;
-			}
-
-			.mui-col-sm-4,
-			.mui-col-xs-8 {
-				height: 36px;
-			}
-
-			.mui-checkbox.mui-left input[type=checkbox],
-			.mui-radio.mui-left input[type=radio] {
-				left: 0px;
-			}
-
-			.mui-checkbox.mui-left label,
-			.mui-radio.mui-left label {
-				padding-left: 50%;
-				padding-right: 0px;
-			}
-
-			input[type=color],
-			input[type=date],
-			input[type=datetime-local],
-			input[type=datetime],
-			input[type=email],
-			input[type=month],
-			input[type=number],
-			input[type=password],
-			input[type=search],
-			input[type=tel],
-			input[type=text],
-			input[type=time],
-			input[type=url],
-			input[type=week],
-			select,
 			textarea {
 				margin-bottom: 0px;
-			}
-
-			.mui-checkbox input[type=checkbox]:before,
-			.mui-radio input[type=radio]:before {
-				/*font-size: 20px;*/
-			}
-
-			.call-type {
-				width: 20%;
-				float: left;
-			}
-
-			.mui-media-body {
-				background: #D8D8D8;
-				padding: 3px;
+				height: 20rem;
 			}
 		</style>
 	</head>
@@ -98,42 +37,42 @@
 		</header>
 		<div class="mui-content">
 			<ul class="mui-table-view" id="ul_table" style="margin-top: 0px;">
-				<div style="width: 100%;">
-					<!--<div class="mui-row">-->
-					<!--<div class="mui-col-sm-4 mui-col-xs-4" style="padding-left: 5%;line-height: 36px;">
-								<span class="mui-icon iconfont icon-date" style="color: deepskyblue;margin-right: 10px;"></span>
-								<font style="margin-right: 10px;">时间</font>
-							</div>
-							<div class="mui-col-sm-8 mui-col-xs-8" style="line-height: 36px;">
-								<font id="time" style="color: #AAAAAA;">2016年11月18日11:31</font>
-							</div>-->
-					<!--<div class="mui-col-sm-4 mui-col-xs-4" style="padding-left: 5%;line-height: 36px;">
-							<span class="mui-icon iconfont icon-xie" style="color: #86BE49;margin-right: 10px;"></span>
-							<font style="margin-right: 10px;">类型</font>
-						</div>
-						<div class="mui-col-sm-3 mui-col-xs-3" value="2">
-							<div class="mui-input-row mui-checkbox mui-left">
-								<label>记事</label>
-								<input id="cb_2" name="checkbox" type="checkbox" checked="true" disabled="disabled">
-							</div>
-						</div>
-					</div>-->
-					<div id="record">
-						<textarea id="textarea_record" rows="6" placeholder="记事：" oninput="if(value.length>500)value=value.slice(0,500)" style="border: none;border-bottom: 1px solid #D9D9D9;"></textarea>
-						<div id="MultiMedia">
-						</div>
+				<div id="record">
+					<textarea id="textarea_record" rows="6" placeholder="记事：" oninput="if(value.length>500)value=value.slice(0,500)" style="border: none;border-bottom: 1px solid #D9D9D9;"></textarea>
+					<div id="MultiMedia">
 					</div>
 				</div>
 			</ul>
 		</div>
+
+		<script src="../../js/mui.min.js"></script>
+		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
+		<script type="text/javascript" src="../../js/utils/MultiMedia.js"></script>
+		<script type="text/javascript" src="../../js/utils/events.js"></script>
+		<script type="text/javascript" src="../../js/cloud/AndroidFileSystem.js"></script>
+		<script type="text/javascript" src="../../js/qiniu/qiniu.js"></script>
+		<script type="text/javascript" src="../../js/utils/cryption.js"></script>
+		<script type="text/javascript" src="../../js/utils/CloudFileUtil.js"></script>
+		<script type="text/javascript" src="../../js/storageKeyName.js"></script>
+		<script type="text/javascript" src="../../js/mui.zoom.js"></script>
+		<script type="text/javascript" src="../../js/mui.previewimage.js"></script>
+
 		<script type="text/javascript">
 			mui.init();
+			var multiMedia; //多媒体控件
+			var mainData; //记录数据
+			var textArea; //输入框
+			var pathList = []; //记录需要删掉的图片和缩略图
+
 			mui.plusReady(function() {
-				//---从父页面获取数据---start---
+//				events.closeWaiting();
+				mui.previewImage();
+				events.blurBack();
 				var main = plus.webview.currentWebview(); //获取当前窗体对象
-				var subData = main.data; //接收页面传入的参数值
-				console.log('从父页面获取的数据:' + JSON.stringify(subData));
-				document.getElementById("title").innerText = subData.data.StudentName;
+				mainData = main.data; //接收页面传入的参数值
+				console.log('从父页面获取的数据:' + JSON.stringify(mainData));
+				document.getElementById("title").innerText = mainData.data.StudentName;
+				textArea = document.getElementById("textarea_record");
 				//---从父页面获取数据---end---
 				multiMedia = MultiMedia.multiMedia({
 					MultiMediaId: 'MultiMedia', //存放多媒体对象控件的id
@@ -144,49 +83,259 @@
 				});
 
 				document.getElementById('commit').addEventListener('tap', function() {
-					var msgContent = document.getElementById("textarea_record").value;
-					if(msgContent.replace(/(^\s*)|(\s*$)/g, "") == "") {
-						mui.toast('请输入文字');
+					var msgContent = textArea.value;
+					if(msgContent.replace(/(^\s*)|(\s*$)/g, "") == "" && multiMedia.data.PictureArray.length == 0) {
+						mui.toast('内容不能为空');
 					} else {
-						document.getElementById("commit").disabled = true;
-						var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
-						var personalUNICK = '【' + window.myStorage.getItem(window.storageKeyName.PERSONALINFO).unick + '家长】';
-
-						//70.（云档案）新增某学生档案
-						//所需参数
-						var comData = {
-							parentId: personalUTID, //家长ID,
-							studentId: subData.data.StudentId, //	学生ID,
-							studentName: subData.data.StudentName, //学生姓名,
-							className: '', //	班级名称,
-							msgContent: msgContent, //记事内容,
-							encType: '3', //附件类型,1图片2音视频3仅文字
-							encAddr: '', //附件地址,多个的情况例如：1.jpg|2.jpg
-							encImg: '', //附件缩略图地址,
-							publisherName: personalUNICK, //	发布者姓名,
-							noteType: '2', //点到记事类型,1点到2记事
-							checkType: '0' //点到类型,1 正常2 旷课3 迟到4 早退5 其他
-						};
-						//返回	非0为正确
 						var wd = events.showWaiting();
-						postDataPro_addStudentFile(comData, wd, function(data) {
-							console.log('70_addStudentFile_新增某学生档案.90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
-							if(data.RspCode == 0) {
-								console.log('新增成功：' + JSON.stringify(data.RspData.Result));
-								events.fireToPageNone('record_student_sub.html', 'refreshView');
-								mui.toast('发送成功');
-								mui.back();
-							} else {
-								if(data.RspCode != 9) {
-									mui.toast(data.RspTxt);
-								}
-								document.getElementById("commit").disabled = false;
-							}
-							wd.close();
-						});
+						document.getElementById("commit").disabled = true;
+						if(multiMedia.data.PictureArray.length == 0) { //没有传附件
+							addRecorc(wd, '3', '', '');
+						} else {
+							uploadFile(wd);
+						}
 					}
 				});
-			})
+			});
+
+			/**
+			 * 新增一条档案
+			 * @param {Object} wd 等待框
+			 * @param {Object} encType 附件类型,1图片2音视频3仅文字
+			 * @param {Object} encAddr 附件地址
+			 * @param {Object} encImg 附件缩略图地址
+			 */
+			function addRecorc(wd, encType, encAddr, encImg) {
+				var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
+				var personalUNICK = '【' + window.myStorage.getItem(window.storageKeyName.PERSONALINFO).unick + '家长】';
+
+				//70.（云档案）新增某学生档案
+				//所需参数
+				var comData = {
+					parentId: personalUTID, //家长ID,
+					studentId: mainData.data.StudentId, //	学生ID,
+					studentName: mainData.data.StudentName, //学生姓名,
+					className: '', //	班级名称,
+					msgContent: textArea.value, //记事内容,
+					encType: encType, //附件类型,1图片2音视频3仅文字
+					encAddr: encAddr, //附件地址,多个的情况例如：1.jpg|2.jpg
+					encImg: encImg, //附件缩略图地址,
+					publisherName: personalUNICK, //	发布者姓名,
+					noteType: '2', //点到记事类型,1点到2记事
+					checkType: '0' //点到类型,1 正常2 旷课3 迟到4 早退5 其他
+				};
+				postDataPro_addStudentFile(comData, wd, function(data) {
+					console.log('70_addStudentFile_新增某学生档案.90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+					if(data.RspCode == 0) {
+						console.log('新增成功：' + JSON.stringify(data.RspData.Result));
+						events.fireToPageNone('record_student_sub.html', 'refreshView');
+						mui.toast('发送成功');
+						mui.back();
+					} else {
+						mui.toast(data.RspTxt);
+						document.getElementById("commit").disabled = false;
+						pathList = [];
+					}
+					wd.close();
+				});
+			}
+
+			/**
+			 * 上传文件
+			 */
+			function uploadFile(wd) {
+				compressImage(function(pathArray) {
+					var getUpTokenUrl = window.storageKeyName.QNGETUPTOKENFILE; //获取token路径
+					var mainSpace = window.storageKeyName.QNPUBSPACE; //公开空间
+					var uploadSpace = window.storageKeyName.RECORD; //记事空间
+					var getToken = {
+						type: '2', //str 必填 获取上传token的类型。0上传需要生成缩略图的文件；1上传文件；2上传需要生成缩略图的多个文件
+						appId: 6, //int 必填 项目id
+						fileArray: pathArray, //array 选填  type为2时有效，多个文件的路径
+						mainSpace: mainSpace, //str 必填 文件存放在私有空间或公有空间
+						uploadSpace: uploadSpace, //str 必填  上传的空间
+					}
+
+					var uploadNum = pathArray.length; //记录上传的次数
+					var uploadErrorNum = 0; //上传失败的次数
+					var encAddr = []; //附件地址
+					var encImg = []; //附件缩略图地址
+					CloudFileUtil.getQNUpToken(getUpTokenUrl, getToken, function(data) {
+						var QNUptoken = data.data; //token数据
+						var configure = data.configure; //获取token的配置信息
+						console.log('七牛上传凭证:' + JSON.stringify(QNUptoken));
+						console.log('七牛配置信息:' + JSON.stringify(configure));
+						if(QNUptoken.Status == 0) { //失败
+							mui.toast('获取上传凭证失败 ' + QNUptoken.Message);
+							console.log('### ERROR ### 请求上传凭证失败 ' + QNUptoken.Message);
+							wd.close();
+						} else {
+							console.log('获取上传凭证成功');
+							//记录图片和缩略图地址
+							for(var j = 0; j < multiMedia.data.PictureArray.length; j++) {
+								for(var i = 0; i < QNUptoken.Data.length; i++) {
+									//console.log(JSON.stringify(QNUptoken.Data[i]));
+									var filePath = QNUptoken.Data[i].P_Key.split("/");
+									var fileName = filePath[filePath.length - 1];
+									var fileId = fileName.split("_")[0];
+									if(multiMedia.data.PictureArray[j].id == fileId) {
+										multiMedia.data.PictureArray[j].domain = QNUptoken.Data[i].Domain + QNUptoken.Data[i].Key;
+										multiMedia.data.PictureArray[j].thumb = QNUptoken.Data[i].OtherKey[configure.thumbKey[i]];
+										pathList.push(multiMedia.data.PictureArray[j].domain);
+										pathList.push(multiMedia.data.PictureArray[j].thumb);
+										encAddr.push(multiMedia.data.PictureArray[j].domain);
+										encImg.push(multiMedia.data.PictureArray[j].thumb);
+									}
+								}
+							}
+
+							for(var i = 0; i < QNUptoken.Data.length; i++) {
+								var filePath = QNUptoken.Data[i].P_Key.split("/");
+								var fileName = filePath[filePath.length - 1];
+								//获取路径
+								var fPath = '';
+								for(var k = 0; k < pathArray.length; k++) {
+									var path = pathArray[k].split("/");
+									var name = path[path.length - 1];
+									if(fileName == name) {
+										fPath = pathArray[k];
+									}
+								}
+								CloudFileUtil.upload(fPath, QNUptoken.Data[i].Token, QNUptoken.Data[i].Key, function(upload, status) {
+									//上传任务完成的监听
+									console.log('上传任务完成' + status + '|' + JSON.stringify(upload));
+									if(status == 200) {
+										console.log('上传成功');
+										uploadNum--;
+										if(uploadNum == 0) {
+											console.log('所有上传都成功');
+											var encAddrStr = encAddr.join('|');
+											var encImgrStr = encImg.join('|');
+											addRecorc(wd, '1', encAddrStr, encImgrStr);
+										}
+									} else {
+										uploadErrorNum++;
+									}
+									if((uploadNum != 0 || uploadErrorNum != 0) && (uploadNum - uploadErrorNum) == 0) {
+										mui.toast('上传失败');
+										console.log('上传失败');
+										BatchDelete(pathList);
+										wd.close();
+									}
+								}, function(upload, status) {
+									var id = upload.__UUID__;
+									var uploadedSize = AndroidFileSystem.readSize(upload.uploadedSize);
+									var totalSize = AndroidFileSystem.readSize(upload.totalSize);
+									var uploadState = upload.state;
+									switch(uploadState) {
+										case 0: //上传任务开始调度
+											console.log('上传任务开始调度:|id:' + id + '|uploadState:' + uploadState);
+											break;
+										case 1: //上传任务开始请求
+											console.log('上传任务开始请求:|id:' + id + '|uploadState:' + uploadState);
+											break;
+										case 2: //上传任务请求已经建立
+											console.log('上传任务请求已经建立:|id:' + id + '|uploadState:' + uploadState);
+											break;
+										case 3: //上传任务提交数据
+											//console.log('上传任务状态监听:|id:' + id + '|uploadedSize:' + uploadedSize + '|totalSize:' + totalSize + '|uploadState:' + uploadState);
+											break;
+										case 4: //上传任务已完成
+											console.log('上传任务已完成:|id:' + id + '|uploadState:' + uploadState);
+											break;
+										case 5: //上传任务已暂停
+											console.log('上传任务已暂停:|id:' + id + '|uploadState:' + uploadState);
+											break;
+										default:
+											console.log('上传任务状态监听:其他状态' + uploadState);
+											break;
+									}
+								}, function(task) {
+									//上传任务创建成功的回调
+									task.start();
+								});
+							}
+						}
+					}, function(xhr, type, errorThrown) {
+						mui.toast('请求上传凭证失败 ' + type);
+						console.log('请求上传凭证失败 ' + type);
+						wd.close();
+					});
+				}, function() {
+					wd.close();
+				});
+			}
+
+			/**
+			 * 压缩图片
+			 * @param {Object} successCallBack 成功的回调
+			 * @param {Object} errorCallBack 失败的回调
+			 */
+			function compressImage(successCallBack, errorCallBack) {
+				var pathArray = [];
+				for(var i = 0; i < multiMedia.data.PictureArray.length; i++) {
+					//console.log(JSON.stringify(multiMedia.data.PictureArray[i]));
+					var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
+
+					var myDate = new Date();
+					var fileName = multiMedia.data.PictureArray[i].id + '_' + myDate.getTime() + personalUTID + (Math.floor(Math.random() * 10)) + '.png';
+
+					plus.zip.compressImage({
+							src: multiMedia.data.PictureArray[i].path, //压缩转换原始图片的路径
+							dst: '_documents/' + fileName, //压缩转换目标图片的路径
+							overwrite: true, //覆盖生成新文件,仅在dst制定的路径文件存在时有效
+							format: '.png'
+						},
+						function(event) {
+							//图片压缩成功
+							var target = event.target; // 压缩转换后的图片url路径，以"file://"开头
+							var size = event.size; // 压缩转换后图片的大小，单位为字节（Byte）
+							var width = event.width; // 压缩转换后图片的实际宽度，单位为px
+							var height = event.height; // 压缩转换后图片的实际高度，单位为px
+							//console.log('压缩图片成功---target:' + target + '|size:' + AndroidFileSystem.readSize(size) + '|width:' + width + '|height:' + height);
+							pathArray.push(target);
+							if(pathArray.length == multiMedia.data.PictureArray.length) {
+								successCallBack(pathArray);
+							}
+						},
+						function(error) {
+							//图片压缩失败
+							var code = error.code; // 错误编码
+							var message = error.message; // 错误描述信息
+							mui.toast('图片压缩失败 ' + '错误编码 ' + code + '描述信息 ' + message);
+							console.log('### ERROR ### 图片压缩失败 ' + JSON.stringify(error));
+							errorCallBack();
+						}
+					);
+				}
+			}
+
+			/**
+			 * 删除上传失败的文件
+			 */
+			function BatchDelete(pathList) {
+				var batchDelete = {
+					appId: 6, //int 必填 项目id
+					urls: pathList //array 必填 需要获取下载token文件的路径
+				}
+				/**
+				 * 七牛批量删除
+				 */
+				CloudFileUtil.BatchDelete(window.storageKeyName.QNGETTOKENDELETE, batchDelete, function(data) {
+						if(data.Status == 1) {
+							//mui.toast('七牛删除成功');
+							console.log('七牛删除成功:' + JSON.stringify(data));
+						} else {
+							mui.toast('删除失败' + JSON.stringify(data));
+							console.log('七牛删除:' + JSON.stringify(data));
+						}
+					},
+					function(xhr, type, errorThrown) {
+						mui.toast('请求删除失败' + JSON.stringify(type));
+						console.log('七牛删除失败:' + JSON.stringify(type));
+					}
+				);
+			}
 		</script>
 	</body>
 
