--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
@@ -31,7 +31,7 @@
 				<!--作者信息-->
 				<div id="anthor-container" class="anthor-container">
 					<img id="anthor-portrait" class="img-portrait display-inlineBlock" />
-					<div class="export-info display-inlineBlock">
+					<div class="export-info">
 						<h5 id="anthor-name" class="anthor-name single-line"></h5>
 						<p id="anthor-info" class="anthor-intro single-line"></p>
 					</div>
