--- a/JiaoBaoYun-hb/html/quan/group-pInfo.html
+++ b/JiaoBaoYun-hb/html/quan/group-pInfo.html
@@ -48,7 +48,7 @@
 					</a>
 				</li>-->
 				<li class="mui-table-view-cell">
-					<a class="mui-navigate-right">
+					<a class="" style="margin-right: 5px;">
 							<p class="info-remark">地区</p>
 						<span id="person-area" class="mui-badge person-space">青岛</span>
 					</a>
