--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
@@ -452,6 +452,7 @@
 
 									//上传文件
 									CloudFileUtil.uploadFile(tokenInfo, localPath, function(uploadData, status) {
+										plus.uploader.clear();
 										console.log(JSON.stringify(uploadData));
 										var img = { //图片信息
 											url: tokenInfo.Domain + tokenInfo.Key,
