--- a/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
+++ b/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
@@ -334,10 +334,11 @@
 			}
 			var getImgsInner = function(imgs) {
 				var imgInner = '';
-				var img_width = "33.33333%";
+				var win_height = document.getElementById('brief-imgs').offsetWidth;
+				var img_width = win_height / 3;
 				if(imgs && imgs.length > 0) {
 					for(var i in imgs) {
-						imgInner += '<img class="answer-img" style="width:' + img_width + '" src="' + imgs[i].ThumbUrl +
+						imgInner += '<img class="homework-img" style="width:' + img_width + 'px;height:' + img_width + 'px;" src="' + imgs[i].ThumbUrl +
 							'" data-preview-src="' + imgs[i].Url + '" data-preview-group="' + imgs[i].FileType + '"/>';
 					}
 				}
