--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
@@ -202,7 +202,7 @@
 					mui.toast('请输入问题');
 					return;
 				} else if(tempText.length > 200) {
-					mui.toast('不能超过200字');
+					mui.toast('标题不能超过200字');
 					return;
 				} else {
 					tempText = replaceAllBL(tempText)
@@ -210,10 +210,10 @@
 				tempText = Trim(askNote.value);
 				console.log('textView.value===' + tempText)
 				if(!tempText || tempText == '') {
-					mui.toast('请输入补充说明');
-					return;
+//					mui.toast('请输入补充说明');
+//					return;
 				} else if(tempText.length > 2000) {
-					mui.toast('不能超过2000字');
+					mui.toast('内容不能超过2000字');
 					return;
 				} else {
 					tempText = replaceAllBL(tempText)
@@ -275,6 +275,7 @@
 			}
 			//选择话题
 			mui('.mui-popover').on('tap', 'li', function(e) {
+				events.blurBack()
 				document.getElementById("channal").innerHTML = this.children[0].innerHTML;
 				askChannel = this.id;
 				console.log('askChannel=' + askChannel);
