--- a/JiaoBaoYun-hb/html/quan/zone_main.html
+++ b/JiaoBaoYun-hb/html/quan/zone_main.html
@@ -22,7 +22,7 @@
 			<div id="random_icon">
 				<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left common-color-white"></a>
 
-				<a id="leave" class="mui-icon iconfont icon-jiujiajingicon02-copy mui-pull-right" style="padding-left: 20px;"></a>
+				<a id="leave" style="visibility:hidden" class="mui-icon iconfont icon-jiujiajingicon02-copy mui-pull-right" style="padding-left: 20px;"></a>
 				<a id="pub-dynamic" style="visibility:hidden" class="mui-icon iconfont icon-fabu mui-pull-right"></a>
 				<!--<a id="pub-dynamic" class="mui-icon mui-icon-compose  mui-pull-right mui-plus-visible" style="padding-left: 20px;"></a>-->
 			</div>
@@ -37,10 +37,15 @@
 			var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid; //用户id
 			var data = plus.webview.currentWebview().data;
 			var NoReadCnt = plus.webview.currentWebview().NoReadCnt //未读条数
+			var flag = plus.webview.currentWebview().flag
 			console.log('我的空间获取的数据' + data)
 			if(data ==personalUTID ){
 				document.getElementById('pub-dynamic').style.visibility = 'visible';
 			}
+			if(flag==0){
+				document.getElementById('leave').style.visibility = 'visible';
+			}
+			
 			events.initSubPage('zonep_sub.html', {data:data,NoReadCnt:NoReadCnt});
 			//			var tempview =  plus.webview.getWebviewById('zonep_sub.html');
 			events.addTap('leave', function() {
