修改是否匿名

--- a/JiaoBaoYun-hb/html/homework/homework-publish.html
+++ b/JiaoBaoYun-hb/html/homework/homework-publish.html
@@ -52,7 +52,7 @@
 						<!--<a id="getRecord" class="mui-icon iconfont icon-yuyin"></a>-->
 						<a id="getImg" class="mui-icon iconfont icon-xiangji1"></a>
 						<a id="getVideo" class="mui-icon iconfont icon-shipin"></a>
-						<a id="get_gallery" class="mui-icon iconfont icon-xiangce"></a>
+						<a id="get_gallery" class="mui-icon iconfont icon-tuku"></a>
 					</div>
 				</div>
 				<div class="online-container">
