--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-addAnswer.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-addAnswer.html
@@ -122,10 +122,12 @@
 										height: 200
 									},
 									cropSize: {
-										height: 280
+										width:600,
+										height: 260
 									}
 								}
 								var data = CloudFileUtil.getSingleImgUploadOptions(localPath, 7, 0, saveSpace, options);
+			
 								//								var data = CloudFileUtil.getQNUpTokenWithManage(localPath, 7, 200, 0, );
 								CloudFileUtil.getQNUpTokenWithManage(storageKeyName.QNGETUPLOADTOKEN, data.options, function(datas) {
 									console.log("获取的数据：" + JSON.stringify(datas));
@@ -180,7 +182,8 @@
 											height: 200 //缩略图最大高度
 										},
 										cropSize: {
-											height: 280 //裁剪宽度值
+											width:600,
+											height: 260 //裁剪宽度值
 										}
 									}
 									//多图片处理获取参数
