--- a/JiaoBaoYun-hb/html/quan/zonep_sub.html
+++ b/JiaoBaoYun-hb/html/quan/zonep_sub.html
@@ -396,49 +396,49 @@
 				requestData(comData)
 			})
 			window.addEventListener('headImgPush', function(data) {
-				console.log(111111)
-				SCREEN_WIDTH = plus.screen.resolutionWidth;
-				gid = plus.webview.currentWebview().data.data.classId
-				mui.previewImage();
-				addReplyView();
-				publisherId = plus.webview.currentWebview().data.data; //发布者id
-
-				tempPage = 1; //页码，请求第几页数据
-				totalCnt = 0; //当前留言的总条数
-				flag = 2; //判断是加载更多1，还是刷新2
-				var comData = {
-					userId: personalUTID, //用户ID
-					publisherId: publisherId, //发布用户ID
-					noteType: '2', //信息类型,1云笔记,2个人空间动态
-					pageIndex: (tempPage).toString(), //当前页数
-					pageSize: '10' //每页记录数
-				};
-				requestData(comData);
+//				plus.webview.currentWebview().reload();
+//				SCREEN_WIDTH = plus.screen.resolutionWidth;
+//				gid = plus.webview.currentWebview().data.data.classId
+//				mui.previewImage();
+//				addReplyView();
+//				publisherId = plus.webview.currentWebview().data.data; //发布者id
+//
+//				tempPage = 1; //页码，请求第几页数据
+//				totalCnt = 0; //当前留言的总条数
+//				flag = 2; //判断是加载更多1，还是刷新2
+//				var comData = {
+//					userId: personalUTID, //用户ID
+//					publisherId: publisherId, //发布用户ID
+//					noteType: '2', //信息类型,1云笔记,2个人空间动态
+//					pageIndex: (tempPage).toString(), //当前页数
+//					pageSize: '10' //每页记录数
+//				};
+//				requestData(comData);
 			})
-			mui('.mui-table-view').on('tap', '.dynamic-personal-image', function() {
-				var index = this.id.replace('headImg', '');
-				var wv = plus.webview.getWebviewById('zone_main.html');
-				console.log('wv='+wv);
-//				if(wv) {
-//					events.fireToPageWithData('zone_main.html', 'headImgPush', {
-//						data: index,
-//						NoReadCnt: 0,
-//						flag: '0'
-//					})
-//				} else {
-					events.openNewWindowWithData('zone_main.html', {
-							data: index,
-							NoReadCnt: 0,
-							flag: '0'
-						});
-					events.fireToPageWithData('zone_main.html', 'headImgPush', {
-							data: index,
-							NoReadCnt: 0,
-							flag: '0'
-						});
+//			mui('.mui-table-view').on('tap', '.dynamic-personal-image', function() {
+//				var index = this.id.replace('headImg', '');
+//				var wv = plus.webview.getWebviewById('zone_main.html');
+//				console.log('wv='+wv);
+////				if(wv) {
+////					events.fireToPageWithData('zone_main.html', 'headImgPush', {
+////						data: index,
+////						NoReadCnt: 0,
+////						flag: '0'
+////					})
+////				} else {
+////					events.openNewWindowWithData('zone_main.html', {
+////							data: index,
+////							NoReadCnt: 0,
+////							flag: '0'
+////						});
+////					events.fireToPageWithData('zonep_sub.html', 'headImgPush', {
+////							data: index,
+////							NoReadCnt: 0,
+////							flag: '0'
+////						});
 //					mui.openWindow({
 //						url: 'zone_main.html',
-//						id: '../quan/zone_main.html',
+//						id: 'zone_main.html',
 //						styles: {
 //							top: '0px', //设置距离顶部的距离
 //							bottom: '0px'
@@ -452,9 +452,9 @@
 //						createNew:true,
 //
 //					});
-//				}
-
-			})
+////				}
+//
+//			})
 			var click = []; //记录被点击的li的id和被点击元素
 
 			mui('.mui-table-view').on('tap', '.mui-table-view-cell', function() {
@@ -896,7 +896,7 @@
 			var comData = {
 				userId: personalUTID, //用户ID,登录用户
 				publisherIds: ids, //发布者ID,例如[1,2,3]
-				pageIndex: 1, //当前页数
+				pageIndex: (tempPage).toString(), //当前页数
 				pageSize: 10 //每页记录数
 			};
 			// 等待的对话框
@@ -1012,6 +1012,7 @@
 						var table = document.body.querySelector('.mui-table-view');
 						//判断是加载更多1，还是刷新2
 						if(flag == 1) {
+							console.log('上拉加载更多')
 							var tempLength = zonepArray.length;
 							//合并数组
 							zonepArray = zonepArray.concat(tempRspData);
