修改学生动态的界面，调整下拉刷新控件

--- a/JiaoBaoYun-hb/html/cloud/app_notes_main.html
+++ b/JiaoBaoYun-hb/html/cloud/app_notes_main.html
@@ -152,7 +152,6 @@
 	<script src="../../js/mui.min.js"></script>
 	<script type="text/javascript" src="../../js/publicProtocol.js"></script>
 	<script type="text/javascript" src="../../js/utils/events.js"></script>
-	<script type="text/javascript" src="../../js/quan/studentdynamic.js"></script>
 	<script type="text/javascript" src="../../js/mui.zoom.js"></script>
 	<script type="text/javascript" src="../../js/mui.previewimage.js"></script>
 	<script type="text/javascript" src="../../js/mui.pullToRefresh.js"></script>
@@ -278,6 +277,7 @@
 					//清空对应的界面
 					document.getElementById('list').innerHTML = '';
 					year = ''; //清空年份
+					markDate='';//日期
 				}
 
 				if(data.RspCode == 0) {
