--- a/JiaoBaoYun-hb/html/quan/studentdynamic_main.html
+++ b/JiaoBaoYun-hb/html/quan/studentdynamic_main.html
@@ -12,21 +12,130 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
-
 		<link rel="stylesheet" href="../../css/mui.min.css">
 		<link rel="stylesheet" href="../../css/utils/common.css" />
-		<script src="../../js/mui.min.js"></script>
-		<script type="text/javascript" src="../../js/qiniu/qiniu.js"></script>
-		<script type="text/javascript" src="../../js/utils/cryption.js"></script>
-		<script type="text/javascript" src="../../js/utils/events.js"></script>
-		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
-		<script type="text/javascript" src="../../js/utils/CloudFileUtil.js"></script>
-		<script type="text/javascript" src="../../js/cloud/AndroidFileSystem.js"></script>
-		<script type="text/javascript" src="../../js/utils/UploadHeadImage.js"></script>
+		<link rel="stylesheet" href="../../css/utils/preview.css" />
+		<link rel="stylesheet" href="../../css/utils/pullToRefresh.css" />
 		<style>
 			.mui-title {
 				/*标题居左*/
 				text-align: left;
+			}
+
+			body,
+			.mui-content {
+				background-color: white;
+			}
+
+			.mui-table-view:before,
+			.mui-table-view:after,
+			.mui-table-view-cell:after {
+				height: 0px;
+			}
+
+			.mui-table-view {
+				word-break: break-all;
+				background-color: white;
+			}
+
+			.mui-col-sm-9 {
+				background: #EEEEEE;
+			}
+
+			.mui-col-sm-3 {
+				/*text-align: center;*/
+			}
+
+			.dynamic-date :first-child {
+				font-size: 3rem;
+				display: inline;
+			}
+
+			.dynamic-date :last-child {
+				font-size: 1.5rem;
+				display: inline;
+			}
+
+			.mui-table-view-cell {
+				padding: 8px;
+				margin: 0px;
+			}
+
+			.mui-table-view-cell.mui-active {
+				background: #D9D9D9;
+			}
+
+			.dynamic-ellipsis-show {
+				overflow: hidden;
+				text-overflow: ellipsis;
+				display: -webkit-box;
+				-webkit-line-clamp: initial;
+				-webkit-box-orient: vertical;
+				font-size: 1.5rem;
+				line-height: 24px;
+				margin-bottom: 3px;
+			}
+
+			.dynamic-date-parent {
+				margin-top: 20px;
+			}
+
+			.dynamic-date-year-parent {
+				width: 16.6%;
+				margin-left: 15px;
+			}
+
+			.dynamic-date-year {
+				font-weight: bold;
+				font-size: 1.8rem;
+			}
+
+			.dynamic-date {
+				/*日期*/
+				font-weight: bold;
+				/*加粗*/
+				margin-top: 4px;
+			}
+
+			.mui-row {
+				margin: 5px 10px;
+				word-break: break-all;
+			}
+
+			.record-imge {
+				width: 100%;
+			}
+
+			.record-picture {
+				overflow: hidden;
+				position: relative;
+				float: left;
+				text-align: center;
+				margin-bottom: 3px;
+			}
+
+			.record-picture-num {
+				/*剩余图片数量*/
+				position: absolute;
+				color: white;
+				background-color: rgba(0, 0, 0, .3);
+				width: 100%;
+				font-size: 25px;
+			}
+
+			.show-all {
+				display: none;
+				color: #CCCCCC;
+				font-size: 1.4rem;
+			}
+
+			.dynamic-name {
+				float: right;
+			}
+
+			.mui-pull-bottom-wrapper {
+				/*底部加载更多区域*/
+				background-color: white;
 			}
 		</style>
 	</head>
@@ -37,49 +146,102 @@
 			<h1 id="title" class="mui-title"></h1>
 			<a id="stuImage" class="mui-icon mui-icon-contact mui-pull-right"></a>
 		</header>
-		<div class="mui-content"></div>
+		<div id="pullrefresh" class="mui-content mui-scroll-wrapper" style="z-index: 1;">
+			<div class="mui-scroll">
+				<!--数据列表-->
+				<ul class="mui-table-view" id="ul_table">
+				</ul>
+			</div>
+		</div>
 	</body>
-
+	<script src="../../js/mui.min.js"></script>
+	<script type="text/javascript" src="../../js/qiniu/qiniu.js"></script>
+	<script type="text/javascript" src="../../js/utils/cryption.js"></script>
+	<script type="text/javascript" src="../../js/utils/events.js"></script>
+	<script type="text/javascript" src="../../js/publicProtocol.js"></script>
+	<script type="text/javascript" src="../../js/utils/CloudFileUtil.js"></script>
+	<script type="text/javascript" src="../../js/cloud/AndroidFileSystem.js"></script>
+	<script type="text/javascript" src="../../js/utils/UploadHeadImage.js"></script>
+	<script type="text/javascript" src="../../js/mui.zoom.js"></script>
+	<script type="text/javascript" src="../../js/mui.previewimage.js"></script>
+	<script type="text/javascript" src="../../js/mui.pullToRefresh.js"></script>
+	<script type="text/javascript" src="../../js/mui.pullToRefresh.material.js"></script>
 	<script type="text/javascript">
 		//启用双击监听
-		mui.init({
-			gestureConfig: {
-				doubletap: true
-			},
-		});
-
-		var contentWebview = null;
-		document.querySelector('header').addEventListener('doubletap', function() {
-			if(contentWebview == null) {
-				contentWebview = plus.webview.currentWebview().children()[0];
-			}
-			contentWebview.evalJS("mui('#pullrefresh').pullRefresh().scrollTo(0,0,100)");
-		});
+		mui.init();
+		var main; //获取当前窗体对象
+		var mainData; //页面传入值
+		var markDate = ''; //记录日期
+		var today = ''; //记录今天日期
+		var year = ''; //记录年份
+		var previewImage; //查看图片的控件
+		var pullRefresh; //下拉，上拉控件
 
 		mui.plusReady(function() {
-			//显示等待窗口
-			var wd = events.showWaiting();
-			//---获取数据并传递数据---start---
-			var main = plus.webview.currentWebview(); //获取当前窗体对象
-			var data = main.data; //接收A页面传入参数值
-			console.log('main-data:' + JSON.stringify(data));
+			previewImage = mui.previewImage();
+			var main = plus.webview.currentWebview();
+			mainData = main.data;
+			console.log(main.id + ' ' + JSON.stringify(mainData));
 
-			document.getElementById("title").innerText = data.studentName;
+			document.getElementById("title").innerText = mainData.studentName;
+			var myDate = new Date();
+			var month = myDate.getMonth() + 1;
+			if(month.length = 1) {
+				month = '0' + month;
+			}
+			today = myDate.getFullYear() + '-' + month + '-' + myDate.getDate();
 
-			//创建子页面
-			events.createSubAppendMain(main, 'studentdynamic_sub.html', data, function(sub) {
-				setTimeout(function() {
-					wd.close();
-				}, 250);
-				events.changeTopPocket();
+			document.body.querySelector('.mui-title').innerText = mainData.studentName;
+
+			var deceleration = mui.os.ios ? 0.003 : 0.0009;
+			mui('.mui-scroll-wrapper').scroll({
+				bounce: false,
+				indicators: true, //是否显示滚动条
+				deceleration: deceleration
 			});
-			//---获取数据并传递数据---end---
+			//初始化下拉，上拉控件
+			pullRefresh = mui('.mui-scroll-wrapper .mui-scroll').pullToRefresh({
+				down: {
+					callback: function() {
+						var self = this;
+						var element = document.getElementById('pullrefresh');
+						var page = JSON.parse(element.getAttribute('data-page'));
+						console.log('down ' + JSON.stringify(page));
+						setTimeout(function() {
+							getNotes(1);
+							self.endPullDownToRefresh(); //结束下拉刷新
+						}, 1500);
+					}
+				},
+				up: {
+					contentinit: '', //默认没有更多显示空白
+					callback: function() {
+						var self = this;
+						var element = document.getElementById('pullrefresh');
+						var page = JSON.parse(element.getAttribute('data-page'));
+						console.log('up ' + JSON.stringify(page));
+						if(page) {
+							setTimeout(function() {
+								getNotes(page.pageIndex + 1);
+								self.endPullUpToRefresh();
+							}, 1500);
+						} else {
+							setTimeout(function() {
+								mui.toast('数据异常，请下拉刷新后重新尝试');
+								self.endPullUpToRefresh();
+							}, 1500);
+						}
+					}
+				}
+			});
+
+			getNotes(1);
 
 			//资料头像修改
 			var stuImage = document.getElementById("stuImage");
 			UploadHeadImage.addListener(stuImage, 1, {
-				id: data.studentId, //资料id
-				name: data.studentName //资料名称
+				id: mainData.studentId, //资料id
+				name: mainData.studentName //资料名称
 			}, function(successCB) {
 				console.log('上传并修改资料头像，成功的回调' + JSON.stringify(successCB));
 				mui.toast('资料头像更新成功');
@@ -87,14 +249,224 @@
 				var cloud_home = plus.webview.getWebviewById('../cloud/cloud_home.html');
 				//触发tab-zone页面的setRead事件
 				mui.fire(cloud_home, 'stuImgeChanged', {
-					id: data.studentId,
+					id: mainData.studentId,
 					img: successCB
 				});
 			}, function(errorCB) {
 				console.log('上传并修改资料头像失败 ' + JSON.stringify(errorCB));
 				mui.toast('资料头像更新失败' + JSON.stringify(errorCB));
 			});
+
+			//点击图片的数字
+			mui('#ul_table').on('tap', '.record-picture-num', function() {
+				previewImage.open(document.getElementById("img_" + this.getAttribute('data-id')))
+			});
+
+			mui('#ul_table').on('tap', '.show-all', function() {
+				var str = this.innerText;
+				var id = this.id.replace('_show', '');
+				if(str == '显示全部') {
+					this.innerText = '收起';
+					document.getElementById(id + "_content").style.webkitLineClamp = 'inherit';
+				} else if(str == '收起') {
+					this.innerText = '显示全部';
+					document.getElementById(id + "_content").style.webkitLineClamp = '3';
+				}
+			});
+
 		});
+
+		/**
+		 * 获取用户针对某学生的点到记事列表
+		 * @param {Object} pageIndex 当前页数
+		 */
+		function getNotes(pageIndex) {
+			var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
+			var userId = personalUTID; //用户ID
+			//4.（点到记事）获取用户针对某学生的点到记事列表
+			//所需参数
+			var comData = {
+				userId: userId, //用户ID----utid
+				classId: mainData.classId, //班级id
+				studentId: mainData.studentId, //学生ID----stuid
+				pageIndex: pageIndex, //当前页数
+				pageSize: '10', //每页记录数
+				publisherId: '0' //发布者ID,0代表全部
+			};
+			//返回model：model_homeSchoolList,model_userNoteInfo
+			console.log('获取列表发送的数据:' + JSON.stringify(comData));
+			// 等待的对话框
+			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+			postDataPro_getNotesByUserForStudent(comData, wd, function(data) {
+				console.log('4.90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+				if(data.RspCode == 0) {
+
+					var tempRspData = data.RspData.Data;
+					//记录页数
+					var page = {
+						pageIndex: pageIndex, //当前页数
+						totalPage: 0 //总页数
+					};
+					if(data.RspCode == 0) {
+						page.totalPage = data.RspData.TotalPage;
+					}
+					document.getElementById('pullrefresh').setAttribute('data-page', JSON.stringify(page))
+					if(page.pageIndex == 1) { //获取的第一页的内容
+						//清空对应的界面
+						document.getElementById('ul_table').innerHTML = '';
+						year = ''; //清空年份
+						markDate = ''; //清空年份
+						var comData2 = {
+							userId: userId, //用户ID----utid
+							classId: mainData.classId, //班级ID----
+							studentId: mainData.studentId //学生ID----stuid
+						};
+						var wd2 = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+						postDataPro_setNoteReadByUser(comData2, wd2, function(data2) {
+							console.log('10.90909090success:RspCode:' + data2.RspCode + ',RspData:' + JSON.stringify(data2.RspData) + ',RspTxt:' + data2.RspTxt);
+							if(data.RspCode == 0) {}
+						});
+						wd2.close();
+					}
+
+					for(var i = 0; i < tempRspData.length; i++) {
+						createNotes(tempRspData[i])
+					}
+
+				} else {
+					mui.toast('获取点到记事列表:' + data.RspTxt);
+					console.log('获取用户针对某学生的点到记事列表:' + data.RspTxt);
+				}
+				if(page.pageIndex >= page.totalPage) {
+					//没有下一页
+					pullRefresh.endPullUpToRefresh(true);
+				} else {
+					if(page.pageIndex == 1) {
+						//获取第一页的数据更新当前控件
+						pullRefresh.refresh(true);
+					}
+				}
+				setTimeout(function() {
+					wd.close();
+				}, 500);
+			});
+		}
+
+		/**
+		 * 界面中创建一条记录
+		 * @param {Object} item
+		 */
+		function createNotes(data) {
+			//console.log('createNotes ' + JSON.stringify(data));
+
+			var date = data.PublishDate.split(' '); //发布的日期和时间
+			var dateItem = date[0]; //日期
+			var time = date[0].split('-'); //时间
+			var timeItem_month = time[1] + '月';
+			var timeItem_day = time[2];
+			var yearItem = dateItem.split('-')[0];
+			if(year == yearItem) { //同一年
+				yearItem = '';
+			} else {
+				year = yearItem; //新的一年
+			}
+			if(year == today.split('-')[0]) { //今年
+				yearItem = '';
+			}
+
+			if(markDate != dateItem) {
+				var element = document.createElement('div');
+				element.className = 'dynamic-date-parent'
+				element.id = dateItem;
+				element.innerHTML = '<div class="dynamic-date-year-parent"><div class="dynamic-date-year">' + yearItem + '</div></div>';
+				document.getElementById("ul_table").appendChild(element);
+			}
+
+			if(dateItem == today) {
+				timeItem_day = '今天';
+				timeItem_month = '';
+			}
+			if(markDate == dateItem) {
+				timeItem_month = '';
+				timeItem_day = '';
+			}
+
+			var html_media = ''; //多媒体
+
+			var width = (document.getElementById(dateItem).offsetWidth * 0.75 - 32) * 0.32;
+			var height = width * 3 / 4;
+			var marginBottom = (document.getElementById(dateItem).offsetWidth * 0.75 - 32) * 0.02;
+			var marginRight;
+
+			if(data.EncType == 1) { //附件类型,1图片2音视频3仅文字
+				var imageArray = data.EncAddr.split('|');
+				var thumbArray = data.EncImgAddr.split('|');
+				var html_0 = '<div class="record-imge" style="height=' + height + marginBottom + 'px' + '">';
+				var html_1 = '';
+				var html_2 = ''; //显示剩余的图片数量
+				var html_3 = ''; //是否显示图片
+				for(var i = 0; i < imageArray.length; i++) {
+					if(i == 2 || i == 5 || i == 8) {
+						marginRight = 0;
+					} else {
+						marginRight = marginBottom;
+					}
+					if(i > 2) {
+						html_3 = 'display: none;';
+					}
+					if(i == 2 && imageArray.length > 3) {
+						html_2 = '<div data-id="' + data.TabId + '_' + i + '" class="record-picture-num" style="line-height: ' + (height + 1) + 'px;">+' + (imageArray.length - 3) + '</div>'
+					}
+					html_1 = html_1 + '<div class="record-picture" style="width: ' + width + 'px; height: ' + height + 'px; margin-right: ' + marginRight + 'px;' + html_3 + '">\
+									' + html_2 + '<img id="img_' + data.TabId + '_' + i + '" src="' + thumbArray[i] + '" data-preview-src="' + imageArray[i] + '" data-preview-group="' + data.TabId + '" style="width:100%;" onload="if(this.offsetHeight<this.offsetWidth){this.style.height=\'' + height + 'px\';this.style.width=\'initial\';this.style.marginLeft=-(this.offsetWidth-' + width + ')/2+\'px\';}else{this.style.marginTop=-(this.offsetHeight-' + height + ')/2+\'px\';}">\
+								</div>';
+				}
+				html_media = html_0 + html_1 + '</div>';
+			}
+
+			var element = document.createElement('div');
+			element.className = 'mui-row';
+			element.innerHTML = '<div class="mui-col-sm-3 mui-col-xs-3">\
+										<div class="dynamic-date">\
+											<div>' + timeItem_day + '</div>\
+											<div>' + timeItem_month + '</div>\
+										</div>\
+									</div>\
+									<div class="mui-col-sm-9 mui-col-xs-9">\
+										<div class="mui-table-view-cell">\
+											<div id="' + data.TabId + '_content" class="dynamic-ellipsis-show"></div>\
+											<div id="' + data.TabId + '_show" class="show-all">显示全部</div>' + html_media + '\
+										</div>\
+									</div>';
+			document.getElementById(dateItem).appendChild(element);
+
+			var type = ''; //类型
+			if(data.NoteType == 1) { //点到
+				if(data.MsgContent != '') { //有内容
+					type = data.CheckTypeStr + ' ';
+				} else {
+					type = data.CheckTypeStr;
+				}
+			}
+			if(data.MsgContent == '' && data.NoteType == 2) {
+				document.getElementById(data.TabId + '_content').style.display = 'none';
+			} else {
+				var height_0;
+				var height_1;
+				var contentEl = document.getElementById(data.TabId + '_content');
+				contentEl.innerText = type + data.MsgContent;
+
+				contentEl.style.webkitLineClamp = '4';
+				height_0 = contentEl.offsetHeight;
+				contentEl.style.webkitLineClamp = '3';
+				height_1 = contentEl.offsetHeight;
+				if(height_0 > height_1) {
+					//内容高度大于三行
+					document.getElementById(data.TabId + "_show").style.display = 'inline';
+				}
+			}
+			markDate = dateItem;
+		}
 	</script>
 
 </html>
