修改参数名

--- a/JiaoBaoYun-hb/html/cloud/record_student_main.html
+++ b/JiaoBaoYun-hb/html/cloud/record_student_main.html
@@ -228,7 +228,7 @@
 			//添加档案
 			document.getElementById('add').addEventListener('tap', function() {
 				events.openNewWindowWithData('record_student_add.html', {
-					data: data
+					data: mainData
 				});
 			});
 
