我关注的人不显示头像的问题

--- a/JiaoBaoYun-hb/html/show/show_home_1.html
+++ b/JiaoBaoYun-hb/html/show/show_home_1.html
@@ -544,7 +544,7 @@ function getAllUserSpacesByUser(tempModel9) {
 						//当前model
 						var tempModel = data1.RspData[i];
 						//更新头像
-						tempModel.uimg = updateHeadImg(tempModel.uimg, 2);
+						tempModel.PublisherImg = updateHeadImg(tempModel.uimg, 2);
 						//循环留言数组
 						for(var item in tempRspData) {
 							//当前循环的model
