--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-sub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-sub.html
@@ -30,7 +30,7 @@
 				</ul>
 			</div>
 			<!--发布问题按钮-->
-			<a id="submit-question" class="mui-icon iconfont icon-myQuestion"></a>
+			<img id="submit-question"  src="../../image/qiuzhi/add-question.png.png" class="add-question" />
 		</div>
 		<!--mui.js-->
 		<script src="../../js/mui.min.js"></script>
